Stop artwork placeholders from collapsing during loading. Consider previous purchases when checking payment, in case price rises.

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -10,7 +10,7 @@ body {
 
 main {
   flex: 1;
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 h1,
@@ -23,7 +23,7 @@ h4 {
 h2,
 h3 {
   color: #333;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 a,
